--- a/Heather Law - CV/index.html
+++ b/Heather Law - CV/index.html
@@ -254,9 +254,9 @@
             </div>
             <div class="sectionContent">
                 <ul>
-                    <li>Address: Santry, Dublin 9</li>
-                    <li>Phone: +353 (0) 86 228 2950</li>
-                    <li><a href="mailto:heatherlaw94@gmail.com" id="email">Email: heatherlaw94@gmail.com</a></li>
+                    <li>Address: Dublin 9</li>
+                    <li>Phone: +353 (0) 86 xxx xxxx</li>
+                    <li><a href="mailto:heatherlaw94@gmail.com" id="email">Email</a></li>
                     <li><a href="linkedin.com/in/heatherlaw1" id="linkedin">LinkedIn</a></li>
                     <li><a href="github.com/heatherlaw" id="github">GitHub</a></li>
                 </ul>
