Files Added for Week 6

--- a/index.html
+++ b/index.html
@@ -1,269 +1,44 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Heather Law</title>
-        <link rel="stylesheet" href="style.css"/>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Web Design Labs</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
     </head>
     <body>
-        <div id="banner">
-            <h1>Heather Law</h1>
-        </div>
-        <div id="navbar">
-            <div class="button"><a href="#profile">Profile</a></div>
-            <div class="button"><a href="#education">Education</a></div>
-            <div class="button"><a href ="#experience">Experience</a></div>
-            <div class="button"><a href="#training">Additional Training</a></div>
-            <div class="button"><a href="#hobbies">Hobbies & Interests</a></div>
-            <div class="button"><a href="#contact">Contact</a></div>
-        </div>
-        <div id="profile">
-             <div id="profileImage">
-                <img src="images/selfie.png" alt="Photograph of Heather Law">
-             </div>   
-             <div id="profileText">
-                <h2>Profile</h2>
-                <p>Qualifed librarian with 6 years of experience working in busy public libraries in 
-                Ireland. Experienced in managing and developing teams, producing team results, and
-                successfully reaching targets.</p>
-            </div>
-            
-        </div>
-        <h2><span style="color:#27243b">Skills</span></h2>   
-        <div id="skills">
-            <div>
-                    <p>Excellent customer service</p>
-                    <p>Leadership & Staff management</p>
-            </div>
-            <div>
-                    <p>Strong communication, writing, and marketing skills</p>
-                    <p>Events co-ordination</p>
-            </div>
-            <div>
-                <p>Budget management</p>
-                <p>Full clean driving licence</p>
+        <br>
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <br>
+                </div>
+                <div class="col">
+                    <button type="button" class="btn btn-info">
+                        <a href="Week5/index.html" style="color:white">Week 5 Lab</a>
+                    </button>
+                </div>
+                <div class="col">
+                    <br>
+                </div>
             </div>
         </div>
-        <div id="education">
-            <div class="sectionHead">
-                <h2>Education</h2> 
-            </div>  
-            <div class="sectionContent">
-                <h4>2024 – 2025 | National College of Ireland</h4>
-                <h4>Higher Diploma in Science in Computing (Software Development)</h4>
-                <ul>
-                    <li>Software Development</li>
-                    <li>Web Design & Client-Side Scripting</li>
-                    <li>Object-Oriented Software Engineering</li>
-                    <li>Introduction to Databases</li>
-                    <li>Data Structures</li>
-                    <li>Computer Architecture Operating Systems & Networks</li>
-                    <li>Algorithms & Advanced Programming</li>
-                    <li>Distributed Systems</li>
-                </ul>
-            </div>
-            <div class="sectionContent">
-                <h4>2018 – 2021 | Robert Gordon University</h4>
-                <h4>MSc Information and Library Studies</h4>
-                <ul>
-                    <li>Cataloguing & Classification</li>
-                    <li>Digital Libraries</li>
-                    <li>Knowledge Organisation</li>
-                    <li>Information Seeking & Use</li>
-                    <li>Methods, Metrics, & Analytics</li>
-                    <li>Managing Library Services</li>
-                </ul>
-                <h4>Projects:</h4>
-                <ul>
-                    <li>
-                        Worked with a team of students to create a full 4-year library
-                        service development plan, including projected budgets for all
-                        services, projects, and staffng.
-                    </li>
-                    <li>
-                        Developed a final year dissertation project on the topic of digital
-                        library spaces and the viability of virtual library services.
-                    </li>
-                </ul>
-            </div>
-            <div class="sectionContent">
-                <h4>2013 – 2016 | University College Dublin</h4>
-                <h4>BA Art History and English</h4>
-            </div>
-            <div class="sectionContent">
-                <h4>2012 – 2013 | Ballyfermot College of Further Education</h4>
-                <h4>Certificate in Art, Design, and Mixed Media</h4>
-            </div>
-            <div class="sectionContent">
-                <h4>2012 | St. Mary’s College, Naas</h4>
-                <h4>Leaving Certificate</h4>
+        <br>
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <br>
+                </div>
+                <div class="col">
+                    <button type="button" class="btn btn-info">
+                        <a href="Week6/index.html" style="color:white">Week 6 Lab</a>
+                    </button>
+                </div>
+                <div class="col">
+                    <br>
+                </div>
             </div>
         </div>
-        <div id="experience">
-            <div class="sectionHead">
-                <h2>Experience</h2>
-            </div>
-            <div class="sectionContent">
-                <h4>Librarian | Kildare County Council</h4>
-                <h4>March 2023 – Present</h4>
-                <ul>
-                    <li>Grade 5 librarian in Maynooth Community Library.</li>
-                    <li>Responsible for managing a team of staff within the library,
-                        monitoring performance and development through utilisation of
-                        PMDS process.
-                    </li>
-                    <li>Management of book budget for the branch, assigning funding to
-                        staff for stock buying and overseeing collection development.
-                    </li>
-                    <li>Responsible for Health & Safety and building maintenance, liaising
-                        with contractors, and ensuring adherence to all H&S policies.
-                    </li>
-                    <li>Develop and manage the Kildare Libraries blog as a member of
-                        the county marketing team. Created and maintain the blog
-                        through WordPress, producing regular content and compiling
-                        reports on statistics.
-                    </li>
-                </ul>
-            </div>
-            <div class="sectionContent">
-                <h4>Librarian | Offaly County Council</h4>
-                <h4>August 2021 – March 2023</h4>
-                <ul>
-                    <li>Grade 5 librarian managing staff in Tullamore Library from 2021 – 2023, and from 
-                        October 2022 – March 2023 managing an additional team in Birr Municipal District, 
-                        covering Birr, Ferbane, and Banagher Libraries.</li>
-                    <li>Responsible for IT services for Offaly Libraries, including testing of My 
-                        Open Library services and training staff
-                        with the aim of relaunching service post-Covid.
-                    </li>
-                    <li>Member of the county marketing team, maintaining and producing content for the 
-                        Offaly Libraries blog and marketing through social media.
-                    </li>
-                    <li>Supported the launch of the Sensory Offaly programme, including cataloguing of new 
-                        stock using Sierra LMS, creation of Sensory Offaly brochures and marketing materials, 
-                        and organisation of launch event.
-                    </li>
-                    <li>Training staff in the use of the new Spydus LMS during national changeover, 
-                        along with troubleshooting issues with LMS and liaising with Dublin City 
-                        LMS team to report any bugs.
-                    </li>
-                    <li>Work Matters coordinator for Offaly County Library service, responsible 
-                        for developing a yearly programme of events. This role also involved 
-                        regularly liaising with key Work Matters partners, such as Offaly LEO, OLDC,
-                        Citizens’ Information, Intreo, and LOETB.
-                    </li>
-                    <li>
-                        Responsible for Health & Safety oversight in Tullamore branch, including 
-                        regular building inspections, fire/lone-working alarm drills, ensuring 
-                        adherence to Covid-19 restrictions, risk assessments, etc.
-                    </li>
-                </ul>
-            </div>
-            <div class="sectionContent">
-                <h4>Library Assistant | Kildare County Council</h4>
-                <h4>July 2019 – August 2021</h4>
-                <ul>
-                    <li>Library assistant in Kildare Library HQ, Newbridge.
-                    </li>
-                    <li>Member of county Finance team – used Agresso system to manage purchase 
-                        orders and run reports.
-                    </li>
-                    <li>Responsible for covering in branches across the county – provided cover across 
-                        10 different locations, quickly adapting to new teams and environments.
-                    </li>
-                    <li>Assisting Reader Services team with purchasing and processing new stock 
-                        for all library branches.
-                    </li>
-                    <li>Member of the county marketing team, creating Kildare Libraries blog and 
-                        managing Kildare Libraries Facebook page. Saw an increase of 330% in post 
-                        engagement and a 34% increase in the number of followers.
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div id="training">
-            <div class="sectionHead">
-                <h2>Additional Training</h2>
-            </div>
-            <div class="sectionContent">
-                <ul>
-                    <li>
-                        LGBTI+ Training Links CPD Conference: included training on engaging with 
-                        media, challenges of working on LGBTI+ issues, maintaining motivation and 
-                        resilience within a team, and managing trauma (2023).
-                    </li>
-                    <li>
-                        Training for line managers on updated dignity and work policy and PMDS, 
-                        delivered by IPA (2023).
-                    </li>
-                    <li>
-                        Training for library staff on managing challenging/anti-social behaviour (2022 & 2023).
-                    </li>
-                    <li>
-                        Training with Civica on Spydus LMS circulation and OPAC, in preparation for training 
-                        library staff during national LMS changeover (2022).
-                    </li>
-                    <li>
-                        Volunteer training for Midlands LGBT+ Project on public speaking and media engagement (2022).
-                    </li>
-                    <li>
-                        Manual Handling Training (2021).
-                    </li>
-                    <li>
-                        First aid training: First responder training (2019), updated first aid training for 
-                        Covid-19 (2020), first aidrefresher course (2021).
-                    </li>
-                    <li>
-                        Grade 5 management and PMDS training, delivered by IPA (2021).
-                    </li>
-                    <li>
-                        Agresso training for Kildare Library HQ Þnance team (2020).
-                    </li>
-                    <li>
-                        Healthy Ireland frontline training with LGMA for library staff (2018 & 2019).
-                    </li>
-                    <li>
-                        GDPR training for Offaly County Council staff (2019).
-                    </li>
-                </ul>
-            </div>  
-        </div>
-        <div id="hobbies">
-            <div class="sectionHead">
-                <h2>Hobbies & Interests</h2> 
-            </div> 
-            <div class="sectionContent">
-                <ul>
-                    <li>
-                        Volunteer with Midlands LGBT+ Project, running a monthly LGBTQ+ book club, 
-                        fundraising, and assisting with other social and promotional events.
-                    </li>
-                    <li>
-                        Art and design – painting, drawing, and printmaking. Exhibited work in 
-                        Tullamore Library in 2017 and Edenderry Library in 2018.
-                    </li>
-                    <li>
-                        Writing – wrote articles for University Observer while studying in UCD, blog posts 
-                        for both Offaly and Kildare Libraries, and book reviews for Children's Books Ireland.
-                    </li>
-                </ul>
-            </div> 
-        </div>
-        <div id="contact">
-            <div class="sectionHead">
-                <h2>Contact</h2> 
-            </div>
-            <div class="sectionContent">
-                <ul>
-                    <li>Address: Dublin 9</li>
-                    <li>Phone: +353 (0) 86 xxx xxxx</li>
-                    <li><a href="mailto:heatherlaw94@gmail.com" id="email">Email</a></li>
-                    <li><a href="linkedin.com/in/heatherlaw1" id="linkedin">LinkedIn</a></li>
-                    <li><a href="github.com/heatherlaw" id="github">GitHub</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="sectionHead">
-            <h2>References available on request</h2> 
-        </div>  
     </body>
 </html>
