--- a/Week6/index.html
+++ b/Week6/index.html
@@ -42,7 +42,7 @@
     <div class="container">
         <div class="row" id="profile">
             <div class="col-lg-2 media align-self-center mr-3" id="selfie">
-                <img src="Style/Images/Selfie.png" alt="Photograph of Heather Law" class="rounded">
+                <img src="Style/Images/selfie.png" alt="Photograph of Heather Law" class="rounded">
             </div>
             <div class="col-lg-8">
                 <div class="infoBox rounded">
