--- a/index.html
+++ b/index.html
@@ -40,5 +40,21 @@
                 </div>
             </div>
         </div>
+        <br>
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <br>
+                </div>
+                <div class="col">
+                    <button type="button" class="btn btn-info">
+                        <a href="Week8/index.html" style="color:white">Week 8 Lab</a>
+                    </button>
+                </div>
+                <div class="col">
+                    <br>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
