Added Week 9 Labs
2 labs - 99 bottles of beer and exam results summary

--- a/Week9/index.html
+++ b/Week9/index.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="col">
                     <button type="button" class="btn btn-info">
-                        <a href="Week5/index.html" style="color:white">Week 5 Lab</a>
+                        <a href="Lab1/index.html" style="color:white">Lab 1: 99 Bottles of Beer on the wall</a>
                     </button>
                 </div>
                 <div class="col">
@@ -32,39 +32,7 @@
                 </div>
                 <div class="col">
                     <button type="button" class="btn btn-info">
-                        <a href="Week6/index.html" style="color:white">Week 6 Lab</a>
-                    </button>
-                </div>
-                <div class="col">
-                    <br>
-                </div>
-            </div>
-        </div>
-        <br>
-        <div class="container text-center">
-            <div class="row">
-                <div class="col">
-                    <br>
-                </div>
-                <div class="col">
-                    <button type="button" class="btn btn-info">
-                        <a href="Week8/index.html" style="color:white">Week 8 Lab</a>
-                    </button>
-                </div>
-                <div class="col">
-                    <br>
-                </div>
-            </div>
-        </div>
-        <br>
-        <div class="container text-center">
-            <div class="row">
-                <div class="col">
-                    <br>
-                </div>
-                <div class="col">
-                    <button type="button" class="btn btn-info">
-                        <a href="Week9/index.html" style="color:white">Week 9 Lab</a>
+                        <a href="Lab3/index.html" style="color:white">Lab 3: Exam Subjects and Results</a>
                     </button>
                 </div>
                 <div class="col">
