--- a/index.html
+++ b/index.html
@@ -64,7 +64,23 @@
                 </div>
                 <div class="col">
                     <button type="button" class="btn btn-info">
-                        <a href="Week9/index.html" style="color:white">Week 9 Lab</a>
+                        <a href="Week9/index.html" style="color:white">Week 9 Labs</a>
+                    </button>
+                </div>
+                <div class="col">
+                    <br>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <br>
+                </div>
+                <div class="col">
+                    <button type="button" class="btn btn-info">
+                        <a href="Week10/index.html" style="color:white">Week 10 Lab</a>
                     </button>
                 </div>
                 <div class="col">
